--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "bots": {
         "telegram": {
-            "tg_apikey": "123",
+            "tg_apikey": "579669561:AAFMhNNt7L4HnDNEgPEU3rqrYmHZ3lWpJAo",
             "tg_webhook": "https://dev.infinitloop.md",
             "tg_port": 8443,
             "tg_path_cert": ""
