--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "Syfaro"
+        "Syfaro",
+        "botsconfig",
+        "itoa",
+        "println",
+        "robfig",
+        "standart",
+        "strconv",
+        "struct"
     ]
 }
