start search feedback throw ILBot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Marbo",
         "Syfaro",
+        "Uuhz",
         "botsconfig",
         "itoa",
         "println",
