add queries to config

--- a/config.json
+++ b/config.json
@@ -25,5 +25,7 @@
     },
     "file_holidays":"holidays.txt",
     "query_top":"http://dev.esp.md/top-news?",
-    "query_search":"http://esp.md/bot/search?query="
+    "query_search":"http://esp.md/bot/search?query=",
+    "query_news_1h":"http://esp.md/bot-news/lasthour?page=",
+    "query_news_24h":"http://esp.md/bot-news/last24?page="
 }
