--- a/configsp.json
+++ b/configsp.json
@@ -20,7 +20,7 @@
             "username": "spbotbeltsy@gmail.com",
             "password": "UfptnfCG",
             "email_from": "spbotbeltsy@gmail.com",
-            "email_to": "michajlenko1967@outlook.com"
+            "email_to": "citatel@esp.md"
         }
     },
     "file_holidays": "holidays.txt",
