--- a/config.json
+++ b/config.json
@@ -31,5 +31,6 @@
     "query_news_24h": "http://esp.md/bot-news/last24?page=",
     "query_city_disp": "http://esp.md/bot-news/lasthour/dispetcherskaya?page=",
     "query_city_afisha": "http://esp.md/bot-news/lasthour/afisha?page=",
-    "query_games": "http://esp.md/bot-news/games?page="
+    "query_games": "http://esp.md/bot-news/games?page=",
+    "debug": true
 }
