--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,24 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Go",
+            "label": "Go Run",
             "type": "shell",
             "command": "go run *.go",
             "problemMatcher": [
                 "$go"
             ]
+        },
+        {
+            "label": "Go Build",
+            "type": "shell",
+            "command": "go build",
+            "problemMatcher": [
+                "$go"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
