--- a/config.json
+++ b/config.json
@@ -2,10 +2,11 @@
     "bots": {
         "telegram": {
             "tg_apikey": "463227938:AAG3Ge2qaKk5-56VuUuhzC-lINC197awkKQ",
-            "tg_webhook": "https://dev.infinitloop.md",
+            "tg_webhook": "",
             "tg_port": 8443,
             "tg_path_cert": "/etc/letsencrypt/live/dev.infinitloop.md/fullchain.pem",
-            "tg_path_key": "/etc/letsencrypt/live/dev.infinitloop.md/privkey.pem"
+            "tg_path_key": "/etc/letsencrypt/live/dev.infinitloop.md/privkey.pem",
+            "log_file": "tgbot.log"
         },
         "facebook": {
             "fb_apikey": "321",
@@ -34,5 +35,5 @@
     "query_city_disp": "http://esp.md/bot-news/lasthour/dispetcherskaya?page=",
     "query_city_afisha": "http://esp.md/bot-news/lasthour/afisha?page=",
     "query_games": "http://esp.md/bot-news/games?page=",
-    "debug": true
+    "debug": false
 }
