--- a/config.json
+++ b/config.json
@@ -35,5 +35,5 @@
     "query_city_disp": "http://esp.md/bot-news/lasthour/dispetcherskaya?page=",
     "query_city_afisha": "http://esp.md/bot-news/lasthour/afisha?page=",
     "query_games": "http://esp.md/bot-news/games?page=",
-    "debug": false
+    "debug": true
 }
