--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,19 @@
         "standart",
         "strconv",
         "struct",
-        "testuser"
+        "testuser",
+        "Адвента",
+        "Архистратига",
+        "Ацерет",
+        "Кипур",
+        "Мавлид",
+        "Мухаммеда",
+        "Параскевы",
+        "Симхат",
+        "Суккот",
+        "Шмини",
+        "автодорожника",
+        "новолетие",
+        "обструктивной"
     ]
 }
