--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,35 @@
 {
     "cSpell.words": [
+        "Afisha",
+        "Iumas",
         "Kadhf",
         "Marbo",
+        "Michajlenko",
         "Syfaro",
         "Ufptnf",
         "Uuhz",
+        "Viber",
+        "asdine",
         "botsconfig",
+        "citya",
+        "cityd",
+        "fsnotify",
+        "gmail",
         "itoa",
+        "mileusna",
         "println",
         "robfig",
         "standart",
         "strconv",
         "struct",
+        "subscribec",
+        "subscribehd",
+        "subscribetp",
         "testuser",
+        "tgbotapi",
+        "tguser",
+        "topc",
+        "topv",
         "Адвента",
         "Архистратига",
         "Ацерет",
@@ -24,6 +41,8 @@
         "Суккот",
         "Шмини",
         "автодорожника",
+        "комманду",
+        "комментируемые",
         "новолетие",
         "обструктивной"
     ]
