--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,19 @@
 {
     "cSpell.words": [
         "Afisha",
+        "EBRR",
+        "Hman",
         "Iumas",
         "Kadhf",
+        "Knauf",
         "Marbo",
         "Michajlenko",
+        "Mikrotik",
+        "Slaider",
         "Syfaro",
+        "UCRM",
+        "UNMS",
+        "Ubiquiti",
         "Ufptnf",
         "Uuhz",
         "Viber",
@@ -14,10 +22,14 @@
         "citya",
         "cityd",
         "fsnotify",
+        "fullchain",
         "gmail",
+        "infinitloop",
         "itoa",
+        "letsencrypt",
         "mileusna",
         "println",
+        "privkey",
         "robfig",
         "standart",
         "strconv",
@@ -25,11 +37,13 @@
         "subscribec",
         "subscribehd",
         "subscribetp",
+        "sverki",
         "testuser",
         "tgbotapi",
         "tguser",
         "topc",
         "topv",
+        "userman",
         "Адвента",
         "Архистратига",
         "Ацерет",
