--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,10 +17,13 @@
         "Ufptnf",
         "Uuhz",
         "Viber",
+        "apikey",
         "asdine",
         "botsconfig",
         "citya",
         "cityd",
+        "disp",
+        "fbbot",
         "fsnotify",
         "fullchain",
         "gmail",
@@ -31,6 +34,8 @@
         "println",
         "privkey",
         "robfig",
+        "smtp",
+        "spbotbeltsy",
         "standart",
         "strconv",
         "struct",
@@ -39,11 +44,14 @@
         "subscribetp",
         "sverki",
         "testuser",
+        "tgbot",
         "tgbotapi",
         "tguser",
         "topc",
         "topv",
         "userman",
+        "vbbot",
+        "webhook",
         "Адвента",
         "Архистратига",
         "Ацерет",
