tasks for Build Linux

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,6 +32,24 @@
             }
         },
         {
+            "label": "Go Build TG Linux",
+            "type": "shell",
+            "command": "go build",
+            "options": {
+                "env": {
+                    "GOOS":"linux",
+                    "GOARCH":"amd64"
+                }
+            },
+            "problemMatcher": [
+                "$go"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
             "label": "Go Build VB",
             "type": "shell",
             "command": "cd VbBot && go build",
@@ -42,6 +60,24 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Go Build VB Linux",
+            "type": "shell",
+            "command": "cd VbBot && go build",
+            "options": {
+                "env": {
+                    "GOOS": "linux",
+                    "GOARCH": "amd64"
+                }
+            },
+            "problemMatcher": [
+                "$go"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
-    ]
+    ] 
 }
