--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "Суккот",
         "Шмини",
         "автодорожника",
+        "бельцком",
         "комманду",
         "комментируемые",
         "новолетие",
