--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Marbo",
         "Michajlenko",
         "Mikrotik",
+        "Navig",
         "Slaider",
         "Syfaro",
         "UCRM",
