--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
         "комманду",
         "комментируемые",
         "новолетие",
-        "обструктивной"
+        "обструктивной",
+        "руддщ"
     ]
 }
