--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
         "topv",
         "userman",
         "vbbot",
+        "vbuser",
         "webhook",
         "Адвента",
         "Архистратига",
@@ -70,6 +71,7 @@
         "комментируемые",
         "новолетие",
         "обструктивной",
-        "руддщ"
+        "руддщ",
+        "ьутг"
     ]
 }
