--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,9 +41,13 @@
         "standart",
         "strconv",
         "struct",
+        "subscr",
+        "subscrcity",
         "subscribec",
         "subscribehd",
         "subscribetp",
+        "subscrlast",
+        "subscrtop",
         "sverki",
         "testuser",
         "tgbot",
