--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,10 @@
         "botsconfig",
         "citya",
         "cityd",
+        "conformc",
+        "conformh",
+        "conforml",
+        "conformt",
         "disp",
         "fbbot",
         "fsnotify",
@@ -43,9 +47,11 @@
         "struct",
         "subscr",
         "subscrcity",
+        "subscrh",
         "subscribec",
         "subscribehd",
         "subscribetp",
+        "subscrl",
         "subscrlast",
         "subscrtop",
         "sverki",
