Begin with cron. Top add

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "topv",
         "userman",
         "vbbot",
+        "vbbusers",
         "vbuser",
         "webhook",
         "Адвента",
