Replace комманду on команду

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,7 @@
         "Шмини",
         "автодорожника",
         "бельцком",
-        "комманду",
+        "команду",
         "комментируемые",
         "новолетие",
         "обструктивной",
