--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
         "Адвента",
         "Архистратига",
         "Ацерет",
+        "Выбирете",
+        "Выбирите",
         "Кипур",
         "Мавлид",
         "Мухаммеда",
