--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "apikey",
         "asdine",
         "botsconfig",
+        "citatel",
         "citya",
         "cityd",
         "conformc",
